Legger til endpoint for å hente personId basert på fødselsnummer og implementerer tilhørende repository
